WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
310874
[threaded-animations] REGRESSION: animating to an implicit value for individual transform properties fails to animate
https://bugs.webkit.org/show_bug.cgi?id=310874
Summary
[threaded-animations] REGRESSION: animating to an implicit value for individu...
Antoine Quint
Reported
2026-03-27 02:32:10 PDT
A simple test such as this one: document.body.appendChild(document.createElement("div")).animate({ offset: 0, "translate": "0px 120px", opacity: 0 }, 1000); … crashes the UI process :( This used to work fine prior to threaded animations.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-03-27 02:32:30 PDT
<
rdar://problem/173487467
>
Antoine Quint
Comment 2
2026-03-27 02:34:42 PDT
Sorry, not a crash, just a behavior failure.
Antoine Quint
Comment 3
2026-03-27 02:42:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61481
Antoine Quint
Comment 4
2026-03-27 11:04:45 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58819
EWS
Comment 5
2026-03-28 01:26:00 PDT
Committed
310146@main
(8f4c548a8aaf): <
https://commits.webkit.org/310146@main
> Reviewed commits have been landed. Closing PR #61481 and removing active labels.
EWS
Comment 6
2026-03-31 01:14:33 PDT
Committed
305413.600@safari-7624-branch
(e79e52d7afae): <
https://commits.webkit.org/305413.600@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4853 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug